fixed responsiveness issues on mobile

--- a/css/services.css
+++ b/css/services.css
@@ -48,34 +48,30 @@ Top Header Logo Area
 ****************************************************************************************************
 */
 
-/* Center the logo and header text */
-/* Only apply hover dropdown on larger screens */
-
 .navbar-brand {
     color: var(--accent-color);
 }
 
 .header-logo {
-    /* background-color: #2C2C2C; Dark background color */
         text-align: center;
         padding: 10px 0;
     }
 
     .logo-image {
-        width: 120px; /* Adjust logo size as needed */
+        width: 120px; 
         height: auto;
     }
 
     .header-title {
         font-size: 1.2rem;
-        color: #FFF; /* White text color */
-        font-family: 'Montserrat', sans-serif; /* or another serif font */
+        color: #FFF; 
+        font-family: 'Montserrat', sans-serif; 
         margin: 5px 0;
     }
 
     .header-subtitle {
         font-size: 0.9rem;
-        color: #CCC; /* Light gray for subtitle */
+        color: #CCC; 
         font-family: 'Montserrat', sans-serif;
         margin: 0;
     }
@@ -86,7 +82,7 @@ Navbar
 ****************************************************************************************************
 */
 
-/* Only apply hover dropdown on larger screens */
+
 @media (min-width: 1024px) {
 .dropdown:hover .dropdown-menu {
     display: block;
@@ -95,26 +91,25 @@ Navbar
 }
 
 .dark-background {
-    background-color: rgba(0, 0, 0, 0.5) !important; /* Semi-transparent black */
+    background-color: rgba(0, 0, 0, 0.5) !important; 
 }
 
 nav .navbar-nav .nav-item .nav-link {
-    color: var(--text-color) !important; /* Replace with your desired color */
+    color: var(--text-color) !important; 
 }
 
 nav .navbar-nav .nav-item .nav-link:hover {
-    color: var(--accent-color) !important; /* Replace with your desired color */
+    color: var(--accent-color) !important; 
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1) !important;
-    transform: translateY(-2px); /* Creates a subtle lift effect */
-    transition: all 0.3s ease; /* Smooth transition */
+    transform: translateY(-2px); 
+    transition: all 0.3s ease; 
 }
 
-/* for the toggle on mobile device */
 .navbar, .offcanvas {
-    background-color: rgba(0, 0, 0, 0.5) !important; /* Semi-transparent black */
+    background-color: rgba(0, 0, 0, 0.5) !important; 
 }
 
-/* Optional: Set text color to improve readability */
+
 .navbar .nav-link, .offcanvas .nav-link {
     color: var(--text-color) !important;
 }
@@ -128,7 +123,7 @@ nav .navbar-nav .nav-item .nav-link:hover {
 }
 
 .dropdown-menu {
-    background-color: rgba(0, 0, 0, 0.5); /* Same color as the overlay */
+    background-color: rgba(0, 0, 0, 0.5); 
 }
 
 .dropdown-menu a {
@@ -139,7 +134,7 @@ nav .navbar-nav .nav-item .nav-link:hover {
     color: var(--accent-color);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
     background: transparent; 
-    /*transform: translateY(-2px);  Creates a subtle lift effect */
+    /*transform: translateY(-2px); */
 }
 
 /*
@@ -412,7 +407,7 @@ Hero Section
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.8); /* Dark overlay */
+    background-color: rgba(0, 0, 0, 0.8); 
 }
 
 .hero-content {
@@ -431,7 +426,7 @@ Hero Section
     margin-bottom: 20px;
 }
 
-/* Responsive adjustments for smaller screens */
+
 @media (max-width: 768px) {
     .hero{
         height: 60vh;
@@ -456,8 +451,8 @@ About Section
 #about img {
     max-width: 100%;
     height: auto;
-    border-radius: 10px; /* Adds rounded corners to the image */
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5); /* Adds a subtle shadow around the image */
+    border-radius: 10px; 
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5); 
     margin-bottom: 20px;
 }
 
@@ -466,7 +461,7 @@ About Section
     line-height: 1.6;
 }
 
-/* Responsive adjustments for smaller screens */
+
 @media (max-width: 768px) {
     #about .col-md-6 {
         text-align: center;
@@ -474,7 +469,7 @@ About Section
 
     #about img {
         margin: 0 auto 20px auto;
-        width: 80%; /* Smaller image on mobile devices */
+        width: 80%; 
     }
 }
 
@@ -493,8 +488,8 @@ Homepage: About Section
 #about img {
     max-width: 100%;
     height: auto;
-    border-radius: 10px; /* Adds rounded corners to the image */
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5); /* Adds a subtle shadow around the image */
+    border-radius: 10px; 
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5); 
     margin-bottom: 20px;
 }
 
@@ -503,7 +498,7 @@ Homepage: About Section
     line-height: 1.6;
 }
 
-/* Responsive adjustments for smaller screens */
+
 @media (max-width: 768px) {
     #about .col-md-6 {
         text-align: center;
@@ -511,7 +506,7 @@ Homepage: About Section
 
     #about img {
         margin: 0 auto 20px auto;
-        width: 80%; /* Smaller image on mobile devices */
+        width: 80%; 
     }
 }
 
@@ -626,8 +621,9 @@ Services Section
     border: 1px solid white;
     columns: var(--white-color);
     color: var(--white-color);
-    width: 25%;
+    width: 100%;
     height: 10%;
+    padding: 10px;
 }
 
 .btn-dez .btn:hover {
